# spotivi

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  data.rs  keybindings.rs  main.rs  spotify.rs
src/api/: cursor.rs  interactive_list.rs  mod.rs  paged.rs  playlist.rs  playlist_summary.rs  requests.rs  spotify_api.rs  track.rs
src/views/: mod.rs  playlist.rs  playlist_screen.rs  playlists.rs  playlists_screen.rs  popup.rs
